# SEAI-bin2ast

./: .gitignore  README.md  pyproject.toml
bin2ast/code_generator/: batch_corpus_generator.py  batch_corpus_generator_multiprocessing.py  gen_c_prog.py
bin2ast/gcc2cast/: cast.py  cast_function_call_visitor.py  cast_to_air_model.py  cast_to_air_visitor.py  cast_visitor.py  gcc_ast_to_cast.py  gcc_ast_to_cast_utils.py  metadata.py  networks.py  sandbox.py
bin2ast/gcc2cast/cast_model/: __init__.py  assignment.py  attribute.py  binary_op.py  boolean.py  call.py  class_def.py  dict.py  expr.py  function_def.py  list.py  loop.py  model_break.py  model_continue.py  model_if.py  model_return.py  module.py  name.py  number.py  set.py  string.py  subscript.py  tuple.py  unary_op.py  unary_operator.py  var.py  var_type.py
bin2ast/nmt4code/: README.md
bin2ast/nmt4code/analysis/: analyze_results.py  seq2tree.py  stats.py
bin2ast/nmt4code/configs/: analyze_results.yaml  beam_search.yaml  check_tree.yaml  counter.yaml  prepare_data_v2.yaml  prepare_data_v3.yaml  responsibility.yaml  sample_results.yaml  seq2tree.yaml  stats.yaml  test_bleu_v2.yaml  test_bleu_v3.yaml  train_v2.yaml  train_v3.yaml
bin2ast/nmt4code/data/: check_tree.py  data_loader.py  dataset.py  pickle_loader.py  prepare_data_v2.py  prepare_data_v3.py
bin2ast/nmt4code/experiments/: analyze_results.sh  beam_search.sh  check_tree.sh  counter.sh  prepare_data_v2.sh  prepare_data_v3.sh  responsibility.sh  sample_results.sh  seq2tree.sh  stats.sh  test.sh  test_bleu_v2.sh  test_bleu_v3.sh  train_v2.sh  (+2 more)
(+41 files in other folders)
