[project]
name="skema"
authors=[
    {name="Dharma KC", email="kcdharma@arizona.edu"},
    {name="Clayton T. Morrison", email="claytonm@arizona.edu"}
]
description="bin2ast: a machine learning framework for learning a binary code to abstract syntax tree interpreter"
version="1.0.0"
dependencies=[
    networkx
    numpy
    pygraphviz
    six
]
license={text="Apache 2.0 modified"}

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters

# Minimum requirements for the build system to execute.
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"